Atualização do Projeto

--- a/src/app/cadastro/hq.component.html
+++ b/src/app/cadastro/hq.component.html
@@ -98,6 +98,28 @@
                   <option *ngFor="let formato of formatos" [value]="formato.codigo">{{ formato.nome }}</option>
                 </select>
               </label>
+              <label for="preco" *ngIf="!this.isAddNew">Preço</label>
+              <label class="d-block" *ngIf="!this.isAddNew">
+                <input
+                    type="text"
+                    class="form-control"
+                    formControlName="preco"
+                    readonly
+                  />
+              </label>
+              <label for="dtPublicacao" *ngIf="!this.isAddNew">Data de Publicação</label>
+              <label class="d-block" *ngIf="!this.isAddNew">
+                <input
+                    type="text"
+                    class="form-control"
+                    formControlName="dtPublicacao"
+                    readonly
+                  />
+              </label>
+              <label for="capa" *ngIf="!this.isAddNew">Capa</label>
+              <label class="d-block" *ngIf="!this.isAddNew">
+                <img class="img-full" src="http://127.0.0.1:8887/Capas/{{ capa }}" alt="Angular" />
+              </label>
             </div>
             <div class="col-sm">
               <label for="anoLancamento" *ngIf="this.isAddNew">Ano de Lançamento</label>
@@ -155,12 +177,47 @@
                   <option *ngFor="let lido of lidos" [value]="lido.codigo">{{ lido.nome }}</option>
                 </select>
               </label>
+              <label for="licenciador" *ngIf="!this.isAddNew">Licenciador</label>
+              <label class="d-block" *ngIf="!this.isAddNew">
+                <input
+                    type="text"
+                    class="form-control"
+                    formControlName="licenciador"
+                    readonly
+                  />
+              </label>
+              <label for="numeroPaginas" *ngIf="!this.isAddNew">Número de Páginas</label>
+              <label class="d-block" *ngIf="!this.isAddNew">
+                <input
+                    type="text"
+                    class="form-control"
+                    formControlName="numeroPaginas"
+                    readonly
+                  />
+              </label>
+              <label for="personagens" *ngIf="!this.isAddNew">Personagens</label>
+              <label class="d-block" *ngIf="!this.isAddNew">
+                <textarea class="form-control" formControlName="personagens"  rows="3"  readonly></textarea>
+              </label>
+              <label for="roteiro" *ngIf="!this.isAddNew">Desenho/Roteiro/ArteFinal</label>
+              <label class="d-block" *ngIf="!this.isAddNew">
+                <textarea class="form-control" formControlName="roteiro" rows="6" readonly></textarea>
+              </label>
+              <button
+                (click)="onSearch()"
+                class="btn btn-danger w-20"
+                type="submit"
+                [disabled]="entryForm.invalid"
+                *ngIf="this.isAddNew"
+              >
+                <span translate><i class="fas fa-search"></i> Buscar</span>
+              </button>
             </div>
           </div>
           <div class="card-body">
             <div class="col-sm"></div>
           </div>
-          <div class="row">
+         <!-- <div class="row">
             <div class="col-sm">
               <div class="col-sm-3">
                 <button
@@ -170,11 +227,11 @@
                   [disabled]="entryForm.invalid"
                   *ngIf="this.isAddNew"
                 >
-                  <span translate><i class="fas fa-search"></i> Search</span>
+                  <span translate><i class="fas fa-search"></i> Buscar</span>
                 </button>
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
       <div class="container-fluid" *ngIf="this.readyToCreate">
