--- a/src/app/frases/frases.component.html
+++ b/src/app/frases/frases.component.html
@@ -31,6 +31,41 @@
               Id é obrigatório
             </small>
           </label>
+          <label for="positionTitle">Nome HQ</label>
+
+          <label class="d-block">
+            <input
+              type="text"
+              class="form-control"
+              formControlName="nomeHQ"
+              autocomplete="current-nomeHQ"
+            />
+            <span hidden translate>NomeHQ</span>
+            <small
+              [hidden]="entryFormFrases.controls.nomeHQ.valid || entryFormFrases.controls.nomeHQ.untouched"
+              class="text-danger"
+              translate
+            >
+              Nome da HQ é obrigatório
+            </small>
+          </label>
+          <label for="positionTitle">Autor</label>
+          <label class="d-block">
+            <input
+              type="text"
+              class="form-control"
+              formControlName="autor"
+              autocomplete="current-autor"
+            />
+            <span hidden translate>Autor</span>
+            <small
+              [hidden]="entryFormFrases.controls.autor.valid || entryFormFrases.controls.autor.untouched"
+              class="text-danger"
+              translate
+            >
+              Nome do Autor é obrigatório
+            </small>
+          </label>
           <label for="arquivo">Arquivo</label>
           <label class="d-block">
             <input
@@ -51,6 +86,79 @@
         </div>
         <div class="card-body">
           <div class="col-sm"></div>
+        </div>
+      </div>
+      <div class="modal fade" id="modalDetalhes" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              <img class="img-full" src="http://127.0.0.1:8887/Frases/{{ imagem }}" alt="Angular" />
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="container-fluid">
+        <div class="card">
+          <div class="card-header">
+            <div class="float-left"><h3 class="text-info">Frases</h3></div>
+            <div class="float-right">
+              <!-- Add button with routerLink to the detail page -->
+              <!--<a class="btn btn-primary" [routerLink]="['/hq']"><i class="fa fa-plus"></i> Add</a> -->
+            </div>
+          </div>
+          <div class="card-body">
+            <div class="table-responsive-sm">
+              <!-- Angular Datatables server side paging -->
+              <table datatable [dtOptions]="dtOptions" class="row-border hover">
+                <thead>
+                  <tr>
+                    <th>Nome da HQ</th>
+                    <th>Autor</th>
+                    <th>Imagem</th>
+                    <th>Excluir</th>
+                  </tr>
+                </thead>
+                <tbody *ngIf="frases?.length != 0">
+                  <tr *ngFor="let frase of frases">
+                    <td>{{ frase.nomeHQ }}</td>
+                    <td>{{ frase.autor }}</td>
+                    <td>
+                      <button
+                        (click)="exibeImagemFull(frase.arquivo)"
+                        type="button"
+                        class="btn btn-primary"
+                        data-bs-toggle="modal"
+                        data-bs-target="#modalDetalhes"
+                      >
+                        Capa
+                      </button>
+                    </td>
+                    <td>
+                      <button
+                      (click)="onDelee(frase.id)"
+                      class="btn btn-primary"
+                      type="button"
+                      >
+                      Excluir
+                      </button>
+                    </td>
+                  </tr>
+                </tbody>
+                <tbody *ngIf="frases?.length == 0">
+                  <tr>
+                    <td colspan="3" class="no-data-available">No data!</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+          </div>
+          <div class="card-footer">*Campos de busca são Nome da HQ</div>
         </div>
       </div>
       <div class="card-footer">
