--- a/src/app/cadastro/editora.component.html
+++ b/src/app/cadastro/editora.component.html
@@ -3,7 +3,7 @@
   <form [formGroup]="entryFormEditora" novalidate>
     <div class="card">
       <div class="card-header">
-        <div class="float-left"><h3 class="text-info">Adicionar Editora</h3></div>
+        <div class="float-left"><h3 class="text-info">Editora</h3></div>
         <div class="float-right">
           <!-- HTML markup for form mode New or Edit -->
           <h5 class="text-warning font-italic">{{ formMode }}</h5>
