--- a/src/app/cadastro/hq.component.html
+++ b/src/app/cadastro/hq.component.html
@@ -3,7 +3,7 @@
   <form [formGroup]="entryForm" novalidate>
     <div class="card">
       <div class="card-header">
-        <div class="float-left"><h3 class="text-info">Adicionar HQ</h3></div>
+        <div class="float-left"><h3 class="text-info">HQ</h3></div>
         <div class="float-right">
           <!-- HTML markup for form mode New or Edit -->
           <h5 class="text-warning font-italic">{{ formMode }}</h5>
@@ -333,7 +333,8 @@
         </div>
         <div class="float-right">
           <!-- HTML markup for Back button -->
-          <a class="btn text-dark" [routerLink]="['/listahq']"><i class="fa fa-arrow-left"></i> Back</a>
+          <a class="btn text-dark" [routerLink]="['/listahq']" *ngIf="!this.voltarHqAvancado"><i class="fa fa-arrow-left"></i> Back</a>
+          <a class="btn text-dark" [routerLink]="['/listahqavancado']" *ngIf="this.voltarHqAvancado"><i class="fa fa-arrow-left"></i> Back</a>
         </div>
       </div>
     </div>
