Inclusão de Login

--- a/src/app/shell/header/header.component.html
+++ b/src/app/shell/header/header.component.html
@@ -49,6 +49,10 @@
         <a class="nav-item nav-link text-uppercase" routerLink="/frases" routerLinkActive="active">
           <i class="fas fa-file-upload"></i>
           <span translate>Frases</span>
+        </a>  
+        <a class="nav-item nav-link text-uppercase" routerLink="/sair"  routerLinkActive="active">
+          <i class="fas fa-sign-out-alt"></i>
+          <span translate>Sair</span>
         </a>      
       </div>
       <!--<div class="navbar-nav ml-auto">
