--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -7,63 +7,37 @@
 </div>        
       <div class="col-md-12">
       <div class="card card-container">
-        <form
-          *ngIf="!isLoggedIn"
-          name="form"
-          (ngSubmit)="f.form.valid && onSubmit()"
-          #f="ngForm"
-          novalidate
-        >
+        <form [formGroup]="form" novalidate>
           <div class="form-group">
             <label for="username">Usuário</label>
             <input
               type="text"
               class="form-control"
               name="username"
-              [(ngModel)]="form.username"
+              formControlName="username"
               required
-              #username="ngModel"
             />
-            <div
-              class="alert alert-danger"
-              role="alert"
-              *ngIf="username.errors && f.submitted"
-            >
-              Usuário é obrigatório
-            </div>
           </div>
           <div class="form-group">
             <label for="password">Senha</label>
             <input
               type="password"
               class="form-control"
+              formControlName="password"
               name="password"
-              [(ngModel)]="form.password"
               required
-              #password="ngModel"
             />
-            <div
-              class="alert alert-danger"
-              role="alert"
-              *ngIf="password.errors && f.submitted"
-            >
-              <div *ngIf="password.errors.required">Senha é obrigatória</div>
-            </div>
           </div>
           <div class="form-group">
-            <button class="btn btn-primary btn-block">
-              Login
+            <button
+            (click)="onSubmit()"
+            class="btn btn-primary w-20"
+            type="submit"
+            [disabled]="form.invalid"
+            >
+            <span translate><i class="fas fa-sign-in-alt"></i> Login</span>
             </button>
-          </div>
-          <div class="form-group">
-            <div
-              class="alert alert-danger"
-              role="alert"
-              *ngIf="f.submitted && isLoginFailed"
-            >
-             Falha no Login
-            </div>
-          </div>
+          </div>          
         </form>
     
         <div class="alert alert-success" *ngIf="isLoggedIn">
