--- a/src/app/shell/header/header.component.html
+++ b/src/app/shell/header/header.component.html
@@ -50,6 +50,10 @@
           <i class="fas fa-file-upload"></i>
           <span translate>Frases</span>
         </a>  
+        <a class="nav-item nav-link text-uppercase" routerLink="/colecao" routerLinkActive="active">
+          <i class="fas fa-file-upload"></i>
+          <span translate>Colecao</span>
+        </a>  
         <a class="nav-item nav-link text-uppercase" routerLink="/sair"  routerLinkActive="active">
           <i class="fas fa-sign-out-alt"></i>
           <span translate>Sair</span>
