--- a/src/app/cadastro/listahqavancado.component.html
+++ b/src/app/cadastro/listahqavancado.component.html
@@ -145,10 +145,10 @@
             </div>
             <mat-form-field>
               <mat-label>Filter</mat-label>
-              <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia" #input>
+              <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Batman" #input>
             </mat-form-field>
             <div class="card-body">
-              <table mat-table [dataSource]="dataSource"  matSort class="mat-elevation-z8">
+              <table mat-table [dataSource]="dataSource" multiTemplateDataRows matSort class="mat-elevation-z8">
                   
                 <!-- Position Column -->
                 <ng-container matColumnDef="titulo">
@@ -167,6 +167,31 @@
                   <th mat-header-cell *matHeaderCellDef>Link Detalhes</th>
                   <td mat-cell *matCellDef="let hq"><a href="{{ hq.linkDetalhes }}" target="_blank">Link detalhes</a></td>
                 </ng-container>
+
+                <ng-container matColumnDef="expandedDetail">
+                  <td mat-cell *matCellDef="let hq" [attr.colspan]="displayedColumns.length">
+                    <div class="example-element-detail"
+                         [@detailExpand]="hq == expandedElement ? 'expanded' : 'collapsed'">
+                      <div class="example-element-diagram">
+                        <div class="example-element-symbol">
+                          <img class="img-responsive" src="http://127.0.0.1:8887/Capas/{{ hq.capa }}" alt="Capa" />
+                        </div>
+                      </div>
+                      <div class="example-element-description">
+                        {{hq.dataPublicacao}}
+                        <span class="example-element-description-attribution"> Data de Publicação </span>
+                      </div>
+                      <div class="example-element-description">
+                        {{hq.editora}}
+                        <span class="example-element-description-attribution"> Editora </span>
+                      </div>
+                      <div class="example-element-description">
+                        {{hq.preco}}
+                        <span class="example-element-description-attribution"> Preço </span>
+                      </div>
+                    </div>
+                  </td>
+                </ng-container>
   
                 <!-- Weight Column -->
                 <!--<ng-container matColumnDef="thumbCapa">
@@ -174,11 +199,13 @@
                   <td mat-cell *matCellDef="let hq"><a href="{{hq.thumbCapa}}" target="_blank">Capa</a></td>
                 </ng-container> -->
   
-                <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: 'true'"></tr>
-                <tr mat-row *matRowDef="let row; columns: displayedColumns" (click)="selection.toggle(row)"></tr>
-                <tr class="mat-row" *matNoDataRow>
-                  <td class="mat-cell" colspan="4">Não foi encontrada nenhuma HQ com o criterio informado</td>
+                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-row *matRowDef="let element; columns: displayedColumns;"
+                    class="example-element-row"
+                    [class.example-expanded-row]="expandedElement === element"
+                    (click)="expandedElement = expandedElement === element ? null : element">
                 </tr>
+                <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
               </table>
               <mat-paginator [pageSizeOptions]="[100, 200, 300]" showFirstLastButtons></mat-paginator>
               <div
