--- a/src/app/cadastro/listahqavancado.component.html
+++ b/src/app/cadastro/listahqavancado.component.html
@@ -147,19 +147,35 @@
               <mat-label>Filter</mat-label>
               <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Batman" #input>
             </mat-form-field>
+             <!-- Modal -->
+            <div class="modal fade" id="modalDetalhes" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+              <div class="modal-dialog">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                  </div>
+                  <div class="modal-body">
+                    <img class="img-full" src="http://127.0.0.1:8887/Capas/{{ capaFull }}" alt="Angular" />
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                  </div>
+                </div>
+              </div>
+            </div>
             <div class="card-body">
               <table mat-table [dataSource]="dataSource" multiTemplateDataRows matSort class="mat-elevation-z8">
                   
                 <!-- Position Column -->
                 <ng-container matColumnDef="titulo">
                   <th mat-header-cell *matHeaderCellDef mat-sort-header>Titulo</th>
-                  <td mat-cell *matCellDef="let hq"><a [routerLink]="['/hq', hq.id, hq.titulo]">{{ hq.titulo }}</a></td>
+                  <td mat-cell *matCellDef="let hq"><a [routerLink]="['/hq', hq.id, hq.titulo]" target="_blank">{{ hq.titulo }}</a></td>
                 </ng-container>
                 
                     <!-- Position Column -->
                 <ng-container matColumnDef="created">
                    <th mat-header-cell *matHeaderCellDef mat-sort-header>Data de Criação</th>
-                   <td mat-cell *matCellDef="let hq">{{ hq.created | date: 'dd/MM/yyyy' }}</td>
+                   <td mat-cell *matCellDef="let hq">{{ hq.created | date: 'dd/MM/yyyy hh:mm' }}</td>
                 </ng-container>
 
                 <!-- Name Column -->
@@ -174,20 +190,31 @@
                          [@detailExpand]="hq == expandedElement ? 'expanded' : 'collapsed'">
                       <div class="example-element-diagram">
                         <div class="example-element-symbol">
-                          <img class="img-responsive" src="http://127.0.0.1:8887/Capas/{{ hq.capa }}" alt="Capa" />
+                          <img  (click)="exibeImagemFull(hq.capa)" class="img-responsive" src="http://127.0.0.1:8887/Capas/{{ hq.capa }}" alt="Capa" />
                         </div>
                       </div>
                       <div class="example-element-description">
-                        {{hq.dataPublicacao}}
-                        <span class="example-element-description-attribution"> Data de Publicação </span>
+                        Data de Publicação
+                        <span class="example-element-description-attribution">  {{hq.dataPublicacao}} </span>
                       </div>
                       <div class="example-element-description">
-                        {{hq.editora}}
-                        <span class="example-element-description-attribution"> Editora </span>
+                        Editora
+                        <span class="example-element-description-attribution">  {{hq.editora}} </span>
                       </div>
                       <div class="example-element-description">
-                        {{hq.preco}}
-                        <span class="example-element-description-attribution"> Preço </span>
+                        Preço
+                        <span class="example-element-description-attribution"> {{hq.preco}} </span>
+                      </div>
+                      <div class="example-element-description">
+                        <button
+                          (click)="exibeImagemFull(hq.capa)"
+                          type="button"
+                          class="btn btn-primary"
+                          data-bs-toggle="modal"
+                          data-bs-target="#modalDetalhes"
+                        >
+                          Capa
+                        </button>
                       </div>
                     </div>
                   </td>
@@ -207,7 +234,7 @@
                 </tr>
                 <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
               </table>
-              <mat-paginator [pageSizeOptions]="[100, 200, 300]" showFirstLastButtons></mat-paginator>
+              <mat-paginator [pageSizeOptions]="[100, 1000, 3000, 4000]" showFirstLastButtons></mat-paginator>
               <div
                 *ngIf="isLoading"
                 style="display: flex; justify-content: center; align-items: center; background: white"
