--- a/src/app/cadastro/listahqavancado.component.scss
+++ b/src/app/cadastro/listahqavancado.component.scss
@@ -42,11 +42,12 @@ tr.example-element-row:not(.example-expanded-row):active {
 }
 
 .example-element-description {
+  font-weight: bold;
   padding: 16px;
 }
 
 .example-element-description-attribution {
-  opacity: 0.5;
+  font-weight: normal;
 }
 
 .mat-form-field {
