--- a/src/app/cadastro/listahqavancado.component.html
+++ b/src/app/cadastro/listahqavancado.component.html
@@ -233,6 +233,9 @@
                     (click)="expandedElement = expandedElement === element ? null : element">
                 </tr>
                 <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
+                <tr class="mat-row" *matNoDataRow>
+                  <td class="mat-cell" colspan="4">Não foi encontrada nenhuma HQ com o criterio informado</td>
+                </tr>
               </table>
               <mat-paginator [pageSizeOptions]="[100, 1000, 3000, 4000]" showFirstLastButtons></mat-paginator>
               <div
