--- a/src/app/shell/header/header.component.html
+++ b/src/app/shell/header/header.component.html
@@ -25,19 +25,11 @@
         <a class="nav-item nav-link text-uppercase" routerLink="/editora" routerLinkActive="active">
           <i class="fa fa-plus"></i>
           <span translate>Adicionar Editora</span>
-        </a>
-        <a class="nav-item nav-link text-uppercase" routerLink="/listahq" routerLinkActive="active">
-          <i class="fas fa-list"></i>
-          <span translate>HQs</span>
-        </a>
-        <a class="nav-item nav-link text-uppercase" routerLink="/listaeditora" routerLinkActive="active">
-          <i class="fas fa-list"></i>
-          <span translate>Editoras</span>
-        </a>
+        </a>     
         <a class="nav-item nav-link text-uppercase" routerLink="/listahqavancado" routerLinkActive="active">
           <i class="fas fa-list"></i>
           <span translate>Busca Avançada de HQS</span>
-        </a>
+        </a>   
         <a class="nav-item nav-link text-uppercase" routerLink="/frases" routerLinkActive="active">
           <i class="fas fa-file-upload"></i>
           <span translate>Frases</span>
@@ -50,6 +42,37 @@
           <i class="fas fa-sign-out-alt"></i>
           <span translate>Sair</span>
         </a>      
+      </div>
+      <div class="dropdown">
+        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">
+          Buscas
+        </button>
+        <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdownMenuButton2">
+          <li>
+              <a class="nav-item nav-link text-uppercase" routerLink="/listahq" routerLinkActive="active">
+              <i class="fas fa-list"></i>
+              <span translate>HQs</span>
+              </a>
+          </li>
+          <li>
+            <a class="nav-item nav-link text-uppercase" routerLink="/listaeditora" routerLinkActive="active">
+              <i class="fas fa-list"></i>
+              <span translate>Editoras</span>
+            </a>
+          </li>
+          <li>
+            <a class="nav-item nav-link text-uppercase" routerLink="/listadesejo" routerLinkActive="active">
+              <i class="fas fa-list"></i>
+              <span translate>Lista de Desejos</span>
+            </a>
+          </li>
+          <li>
+            <a class="nav-item nav-link text-uppercase" routerLink="/listaleitura" routerLinkActive="active">
+              <i class="fas fa-list"></i>
+              <span translate>Lista de Leitura</span>
+            </a>
+          </li>
+        </ul>
       </div>
       <!--<div class="navbar-nav ml-auto">
         <app-language-selector inNavbar="true" menuClass="dropdown-menu dropdown-menu-right"></app-language-selector>
