alteracao de icones

--- a/src/app/cadastro/editora.component.html
+++ b/src/app/cadastro/editora.component.html
@@ -63,7 +63,7 @@
             [disabled]="entryFormEditora.invalid || !isAddNew"
             *ngIf="this.isAddNew"
           >
-            <span translate><i class="fas fa-plus"></i> Create</span>
+            <span translate><i class="fas fa-plus"></i> Adicionar</span>
           </button>
 
           <button
@@ -73,7 +73,7 @@
             [disabled]="entryFormEditora.invalid || isAddNew"
             *ngIf="!this.isAddNew"
           >
-            <span translate><i class="fas fa-trash-alt"></i> Delete</span>
+            <span translate><i class="fas fa-trash-alt"></i> Excluir</span>
           </button>
         </div>
       </div>
