--- a/src/app/cadastro/listadesejo.component.html
+++ b/src/app/cadastro/listadesejo.component.html
@@ -52,16 +52,16 @@
                   data-bs-toggle="modal"
                   data-bs-target="#modalDetalhes"
                 >
-                  Capa
+                <span translate><i class="far fa-image"></i> Capa</span>
                 </button>
               </td>
               <td>
                 <button
                   (click)="onDelete(hq.id)"
                   type="button"
-                  class="btn btn-primary"
+                  class="btn btn-danger w-20"
                 >
-                  Excluir
+                <span translate><i class="fas fa-trash-alt"></i> Excluir</span>
                 </button>
               </td>
             </tr>
