--- a/src/app/cadastro/listahq.component.html
+++ b/src/app/cadastro/listahq.component.html
@@ -58,7 +58,7 @@
                   data-bs-toggle="modal"
                   data-bs-target="#modalDetalhes"
                 >
-                  Capa
+                <span translate><i class="far fa-image"></i> Capa</span>
                 </button>
               </td>
             </tr>
