--- a/src/app/frases/frases.component.html
+++ b/src/app/frases/frases.component.html
@@ -77,7 +77,9 @@
               (change)="imageInputChange($event)"
               accept="image/png, image/jpeg"
             />
-            <button class="btn btn-primary" (click)="imageInput.click()">Escolha uma imagem (PNG, JPG)</button>
+            <button class="btn btn-primary" (click)="imageInput.click()">              
+            <span translate><i class="far fa-image"></i> Escolha uma imagem (PNG, JPG)</span>
+            </button>
             <div class="card-body">
               <div class="col-sm"></div>
             </div>
@@ -136,16 +138,16 @@
                         data-bs-toggle="modal"
                         data-bs-target="#modalDetalhes"
                       >
-                        Capa
+                      <span translate><i class="far fa-image"></i> Capa</span>
                       </button>
                     </td>
                     <td>
                       <button
                       (click)="onDelee(frase.id)"
-                      class="btn btn-primary"
+                      class="btn btn-danger w-20"
                       type="button"
                       >
-                      Excluir
+                      <span translate><i class="fas fa-trash-alt"></i> Excluir</span>
                       </button>
                     </td>
                   </tr>
