--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -18,7 +18,9 @@
             <div class="card-body">
               <h5 class="card-title">{{tituloCard3}}</h5>
               <p class="text-info bg-dark">Publicado em:</p><p class="text-warning bg-dark">{{publicacaoCard3}}</p>
-              <a [routerLink]="['/hq', idHq3]" class="btn btn-primary" target="_blank">Detalhes</a>
+              <a [routerLink]="['/hq', idHq3]" class="btn btn-primary" target="_blank">
+              <span translate><i class="fas fa-info-circle"></i> Detalhes</span>
+              </a>
             </div>
             </div>
       </div>
@@ -28,7 +30,9 @@
             <div class="card-body">
               <h5 class="card-title">{{tituloCard2}}</h5>
               <p class="text-info bg-dark">Publicado em:</p><p class="text-warning bg-dark">{{publicacaoCard2}}</p>
-              <a [routerLink]="['/hq', idHq2]" class="btn btn-primary" target="_blank">Detalhes</a>
+              <a [routerLink]="['/hq', idHq2]" class="btn btn-primary" target="_blank">
+              <span translate><i class="fas fa-info-circle"></i> Detalhes</span>
+              </a>
             </div>
         </div>
       </div>
@@ -38,7 +42,9 @@
             <div class="card-body">
               <h5 class="card-title">{{tituloCard1}}</h5>
               <p class="text-info bg-dark">Publicado em:</p><p class="text-warning bg-dark">{{publicacaoCard1}}</p>
-              <a [routerLink]="['/hq', idHq1]" class="btn btn-primary" target="_blank">Detalhes</a>
+              <a [routerLink]="['/hq', idHq1]" class="btn btn-primary" target="_blank">
+              <span translate><i class="fas fa-info-circle"></i> Detalhes</span>
+              </a>
             </div>
         </div>
       </div>
@@ -48,7 +54,9 @@
             <div class="card-body">
               <h5 class="card-title">{{tituloCard4}}</h5>
               <p class="text-info bg-dark">Publicado em:</p><p class="text-warning bg-dark">{{publicacaoCard4}}</p>
-              <a [routerLink]="['/hq', idHq4]" class="btn btn-primary" target="_blank">Detalhes</a>
+              <a [routerLink]="['/hq', idHq4]" class="btn btn-primary" target="_blank">
+              <span translate><i class="fas fa-info-circle"></i> Detalhes</span>
+              </a>
             </div>
         </div>
       </div>
@@ -58,7 +66,9 @@
             <div class="card-body">
               <h5 class="card-title">{{tituloCard5}}</h5>
               <p class="text-info bg-dark">Publicado em:</p><p class="text-warning bg-dark">{{publicacaoCard5}}</p>
-              <a [routerLink]="['/hq', idHq5]" class="btn btn-primary" target="_blank">Detalhes</a>
+              <a [routerLink]="['/hq', idHq5]" class="btn btn-primary" target="_blank">
+              <span translate><i class="fas fa-info-circle"></i> Detalhes</span>
+              </a>
             </div>
         </div>
       </div>
