--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,7 +8,7 @@
                   <span class="fw-bold">Nome da HQ:</span> <span class="text-light bg-dark"> {{ tituloFraseHQ }}</span>
                   <span class="fw-bold">Autor:</span> <span class="text-light bg-dark"> {{ autorFrase }}</span>
                 </div>
-                <span>Total de edições cadastradas:</span> <span class="text-info bg-dark"> {{ totalHqs }}</span>
+                <span>Total de ediçõess  ccadastradas:</span> <span class="text-info bg-dark"> {{ totalHqs }}</span>
               </div>
         </div>
       </div>
